--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <a href="#" class="link link--evel link--reg">Реєстрація</a>
                </div>
                <div class="header-mobile">
-                  <a href="#" class="link link--toggle ">
+                  <a href="#" class="link link--toggle">
                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 12" width="18" height="12">
                         <path d="M18 7H0V5h18v2z" />
                         <path d="M18 7H0V5h18v2z" />
@@ -103,7 +103,7 @@
                   </div>
                   <div class="form-row">
                      <div class="form-block">
-                        <input type="text" name="date" class="field field--date" id="date">
+                        <input type="text" name="date" class="field field--date" id="date"  readonly="readonly">
                         <label for="date">Оберіть дату прийому</label>
                      </div>
                      <div class="form-block">
@@ -450,9 +450,44 @@
                <h3 class="title title--h3 bl c2">
                   Онлайн-запис на прийом до лікаря
                </h3>
-               <p class="paragraph lg c4">
-                  Нужно срочно найти стоматолога в Киеве? Не знаете, какая стоматология лучше? Хотите узнать, какой хороший стоматолог принимает недалеко от вашего места жительства или работы? Сервис Zuber поможет вам найти лучшего стоматолога не только в столице, но и по всей Украине.<br><br>
-                  Мы выводим сферу стоматологии и поиска медицинских учреждений на новый уровень. Теперь контакты передовых дантистов всегда будут под рукой и вы в любой момент сможете записаться на прием тогда, когда вам это будет удобно. 
+               <p class="paragraph lg c1">
+                  Нужно срочно найти стоматолога в Киеве? Не знаете, какая стоматология лучше? Хотите узнать, какой хороший стоматолог принимает недалеко от вашего места жительства или работы? Сервис Zuber поможет вам найти лучшего стоматолога не только в столице, но и по всей Украине.</p>
+<p class="paragraph lg c1">Мы выводим сферу стоматологии и поиска медицинских учреждений на новый уровень. Теперь контакты передовых дантистов всегда будут под рукой и вы в любой момент сможете записаться на прием тогда, когда вам это будет удобно. </p>
+
+<p class="paragraph bl c1">Как работает наш сервис?</p>
+<p class="paragraph lg c1">Вы когда-то вызывали такси? Наверняка, у вас был такой опыт. Тогда вы точно знаете, как удобно выбирать не только время посадки, но и иметь возможность посмотреть отзывы о специалисте, его рейтинг и цены. Тот же принцип мы преследуем и в поиске профессионального стоматолога. </p>
+<p class="paragraph lg c1">Всего в пару кликов вы сможете выбрать подходящее медицинское учреждение, врача и время приема. Вам достаточно выбрать категорию, которая вас интересует, отсортировать врачей по рейтингу, по цене за услуги и даже месторасположению.</p>
+
+<p class="paragraph bl c1">Услуги, доступные на нашем сервисе</p>
+<ul class="list--evel">
+
+<li class="c1 lg">Неотложная стоматологическая помощь. Зубная неотложка просто необходима при острой зубной боли и в случаях, когда устранить проблему нужно в максимально короткий срок.</li>
+<li class="c1 lg">Круглосуточная стоматология. Как часто вы и ваши близкие сталкивались с зубной болью ночью? Это происходит постоянно. Всю ночь вы не можете уснуть, а ноющая боль превращается в настоящую пытку. Мы навсегда решили эту проблему, создав круглосуточную дежурную стоматологию, и собрав контакты стоматологических клиник, которые готовы помочь пациенту в любое время дня и ночи.</li>
+<li class="c1 lg">Детская стоматология. Найти подход к ребенку сложно, а в случае с лечением зубов, практически, невозможно. На нашем ресурсе вы найдете лучших детских стоматологов, к которым дети приходят на прием абсолютно без страха.</li>
+<li class="c1 lg">Лечение зубов при беременности. Во время беременности женщины требуют особого подхода. У наших стоматологов большой опыт работы с пациентами даже на поздних сроках беременности.</li>
+<li class="c1 lg">Выравнивание зубов. Хотите стать обладателем «голливудской улыбки»? Тогда пора задуматься о выпрямлении зубов. На нашем ресурсе вы найдете специалистов, которые предложат, как эстетическое выравнивание, так и серьезную операцию.</li>
+<li class="c1 lg">Имплантация зуба. Одна из самых востребованных и популярных услуг в нашей стране. Имплантация поможет восстановить потерянный или поврежденный зуб, который ничем не будет отличаться от ваших родных зубов.</li>
+<li class="c1 lg">Лечение десен. Зачастую, проблемы с зубами, неприятный запах изо рта и кровотечения связаны именно с болезнью десен. Лучше своевременно пройти обследование и полный курс лечения.</li>
+<li class="c1 lg">Отбеливание и чистка зубов. Ежедневно пища, никотин, кофе делают цвет зубов темнее. Вернуть им природную белизну поможет абсолютно безболезненная процедура отбеливания.</li>
+<li class="c1 lg">Пломбирование зубов и каналов. Всегда лучше побороться за зуб, чем избавляться от него. Пломбирование зубов и каналов поможет продлить красоту и здоровье вашей улыбки.</li>
+<li class="c1 lg">Реставрация зубов. У вас откололся кусочек зуба? Нуждаетесь в художественной реставрации или восстановлении зубной эмали? Тогда эта услуга вам точно подойдет.</li>
+<li class="c1 lg">Удаление зубов. Благодаря современным технологиям и методикам, мы можем гарантировать абсолютно безболезненное удаление зубов.</li>
+<li class="c1 lg">Хирургическая стоматология. Бывают ситуации, когда необходима хирургия полости рта. На сервисе Zuber вы найдете лучших зубных хирургов Киева, которые прошли обучение у европейских коллег и имеют многолетний практический опыт в зубной хирургии.</li>
+<li class="c1 lg">Лечение зубов любой сложности. На нашем сервисе вы всегда найдете специалистов, которые решат любую вашу проблему: от удаления кариеса, до инновационных методик лечения под микроскопом.</li>
+</ul>
+<p class="paragraph bl c1">Преимущества использования сервиса Zuber </p>
+<ul class="list--evel">
+
+<li class="c1 lg">Наша специальность - все виды стоматологических услуг.</li>
+<li class="c1 lg">Единая ценовая политика без скрытых доплат.</li>
+<li class="c1 lg">Большой спектр профессиональных услуг для пациентов любого возраста.</li>
+<li class="c1 lg">Работаем 24/7.</li>
+<li class="c1 lg">Все клиники и частные стоматологи проходят проверки перед тем, как появиться в нашей системе.</li>
+<li class="c1 lg">Мы единственные, кто предлагает экстренную помощь и консультации, где бы вы не находились: за городом, в офисе или в другой стране.</li>
+<li class="c1 lg">У каждого пациента есть своя единая карточка, где отмечена история лечения во всех стоматологических клиниках, независимо от их геолокации.</li>
+</ul>
+<p class="paragraph lg c1">Сотни положительных отзывов от пациентов со всей Украины говорят о том, что мы ответственно и с любовью подходим к своему делу. Мы поможем вам побороть страх перед стоматологами и стать обладателем здоровой и красивой улыбки. 
+
                </p>
             </div>
          </div>
