--- a/login.html
+++ b/login.html
@@ -66,80 +66,34 @@
             </div>
          </div>
       </header>
-      <section class="section section-article">
+      <section class="section section-reg">
          <div class="wrapper">
-         	<div class="breabcrumbs">
-         		<a href="#" class="link link--breab">Головна</a>
-         		<a href="#" class="link link--breab">Корисні статі</a>
-               <a href="#" class="link link--breab current">Consectetur aute Lorem eiusmod velit elit irure nulla reprehenderit Lorem sunt duis officia.</a>
-         	</div>
-         	<div class="page-header">
-            		<img src="img/article.png" alt="">
-            	</div>
-            <div class="article">
-               <p class="paragraph c5">May 27, 2015</p>
-               <h2 class="title title--h3 c2 bl"> Consectetur aute Lorem eiusmod velit elit irure nulla reprehenderit Lorem sunt duis officia.</h2>
-               <div class="article-content">
-                  <p class="paragraph c1">
-                     Ea voluptate labore voluptate culpa reprehenderit nisi incididunt tempor nisi et esse deserunt cillum. Sit veniam eiusmod pariatur ad ea tempor minim eu duis voluptate mollit incididunt. Quis id cupidatat sunt magna est ut reprehenderit cupidatat quis. Excepteur pariatur ullamco laborum Lorem ex sunt consequat. Sunt mollit excepteur consectetur anim et labore ipsum labore labore culpa sit dolore. Id dolore anim irure dolor.</p>
+            <div class="reg">
+               <div class="reg-form">
+                  <div class="reg-form__head">
+                     <h2 class="title title--h1 lg c1 text-center">Вхід</h2>
+                     <a href="#" class="link link--back">
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M16 7H3.83L9.42 1.41L8 0L0 8L8 16L9.41 14.59L3.83 9H16V7Z" fill="#5B636A"/>
+</svg>
 
-<p class="paragraph c1">Adipisicing officia incididunt Lorem aliqua aliquip est. Culpa et ut ex dolore. Deserunt sit reprehenderit et cupidatat tempor sit adipisicing.</p>
-<p class="paragraph c1">Do sit et consequat sunt magna. Id veniam aliquip officia nostrud duis. Nostrud eiusmod ad occaecat ullamco in. Velit eu aute cillum consequat ut sit sint proident incididunt laboris laboris fugiat. </p>
-
-<p class="paragraph c1">Sint Lorem id excepteur id velit occaecat velit duis cillum. Laborum excepteur minim reprehenderit exercitation fugiat elit excepteur occaecat ex veniam. Deserunt dolore velit dolore veniam elit veniam reprehenderit deserunt.</p>
-
-<p class="paragraph c1">Aute elit culpa sunt laboris do ipsum elit magna ad. Non proident esse amet veniam quis cupidatat ea sit occaecat consectetur. Do elit irure cillum quis deserunt in. Id fugiat ut pariatur anim velit. Consequat sit Lorem Lorem id culpa sit. Duis laborum dolore reprehenderit excepteur deserunt laboris officia eiusmod dolor.</p>
-
-<p class="paragraph c1">Sint tempor amet occaecat eu amet amet ut id cupidatat minim ullamco duis laborum et. Qui velit occaecat elit voluptate fugiat sint proident. Labore veniam aliquip consequat laboris proident. Ea incididunt ea sit do excepteur adipisicing pariatur et proident.
-                  </p>
-               <div class="banner">
-               <a href="#" class="link link--banner"><img src="img/b1.png" alt=""></a>
-               <a href="#" class="link link--banner"><img src="img/b2.png" alt=""></a>
-            </div>
-                  <p class="paragraph c1">
-                     Ea voluptate labore voluptate culpa reprehenderit nisi incididunt tempor nisi et esse deserunt cillum. Sit veniam eiusmod pariatur ad ea tempor minim eu duis voluptate mollit incididunt. Quis id cupidatat sunt magna est ut reprehenderit cupidatat quis. Excepteur pariatur ullamco laborum Lorem ex sunt consequat. Sunt mollit excepteur consectetur anim et labore ipsum labore labore culpa sit dolore. Id dolore anim irure dolor.</p>
-
-<p class="paragraph c1">Adipisicing officia incididunt Lorem aliqua aliquip est. Culpa et ut ex dolore. Deserunt sit reprehenderit et cupidatat tempor sit adipisicing.</p>
-<p class="paragraph c1">Do sit et consequat sunt magna. Id veniam aliquip officia nostrud duis. Nostrud eiusmod ad occaecat ullamco in. Velit eu aute cillum consequat ut sit sint proident incididunt laboris laboris fugiat. </p>
-
-<p class="paragraph c1">Sint Lorem id excepteur id velit occaecat velit duis cillum. Laborum excepteur minim reprehenderit exercitation fugiat elit excepteur occaecat ex veniam. Deserunt dolore velit dolore veniam elit veniam reprehenderit deserunt.</p>
-
-<p class="paragraph c1">Aute elit culpa sunt laboris do ipsum elit magna ad. Non proident esse amet veniam quis cupidatat ea sit occaecat consectetur. Do elit irure cillum quis deserunt in. Id fugiat ut pariatur anim velit. Consequat sit Lorem Lorem id culpa sit. Duis laborum dolore reprehenderit excepteur deserunt laboris officia eiusmod dolor.</p>
-
-<p class="paragraph c1">Sint tempor amet occaecat eu amet amet ut id cupidatat minim ullamco duis laborum et. Qui velit occaecat elit voluptate fugiat sint proident. Labore veniam aliquip consequat laboris proident. Ea incididunt ea sit do excepteur adipisicing pariatur et proident.
-                  </p>
-               </div>
-               <div class="article-recent">
-                  <div class="article-recent__item">
-                     <p class="paragraph c5">
-                        Jun 25, 2016
-                     </p>
-                     <a href="#"  class="title title--h3 title--link bl c2">
-                        <span>Et ex ad minim amet excepteur irure aliquip laboris in quis ex ...</span>
-                        <img src="img/a2.png" title="a1" alt="a1">
                      </a>
-                     <p class="paragraph paragraph--exert c1">Incididunt adipisicing dolor sit labore pariatur incididunt non Lorem dolor laboris eiusmod. Deserunt veniam mollit amet dolore reprehenderit cupidatat minim voluptate non cupidatat consectetur velit. </p>
                   </div>
-                  <div class="article-recent__item">
-                     <p class="paragraph c5">
-                        Jun 25, 2016
-                     </p>
-                     <a href="#" class="title title--h3 title--link bl c2">
-                        <span>Et ex ad minim amet excepteur irure aliquip laboris in quis ex ...</span>
-                        <img src="img/a1.png" title="a1" alt="a1">
-                     </a>
-                     <p class="paragraph paragraph--exert c1">Incididunt adipisicing dolor sit labore pariatur incididunt non Lorem dolor laboris eiusmod. Deserunt veniam mollit amet dolore reprehenderit cupidatat minim voluptate non cupidatat consectetur velit. </p>
-                  </div>
-                  <div class="article-recent__item">
-                     <p class="paragraph c5">
-                        Jun 25, 2016
-                     </p>
-                     <a href="#"  class="title title--h3 title--link bl c2">
-                        <span>Et ex ad minim amet excepteur irure aliquip laboris in quis ex ...</span>
-                        <img src="img/a3.png" title="a1" alt="a1">
-                     </a>
-                     <p class="paragraph paragraph--exert c1">Incididunt adipisicing dolor sit labore pariatur incididunt non Lorem dolor laboris eiusmod. Deserunt veniam mollit amet dolore reprehenderit cupidatat minim voluptate non cupidatat consectetur velit. </p>
-                  </div>
+                  <form action="any.php" class="form form-reg form-login">
+                     <div class="form-row form-row__side">
+                        <div class="form-block">
+                           <input type="text" name="login" required class="field field--eternal" id="name">
+                           <label for="name">Логін</label>
+                        </div>
+                        <div class="form-block">
+                           <input type="password" name="password" required class="field field--eternal" id="stag">
+                           <label for="stag">Пароль</label>
+                        </div>
+                     </div>
+                     
+                     <button type="submit" class="btn btn--evel btn--submit">Увійти</button>
+                  </form>
+                  
                </div>
             </div>
          </div>
@@ -178,13 +132,12 @@
             </div>
          </div>
       </footer>
-		
-		<a href="#" class="link link--top">
+      <a href="#" class="link link--top">
          <svg viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-           <path d="M2 10l7-7 7 7" stroke="#fff" stroke-width="3"/>
+            <path d="M2 10l7-7 7 7" stroke="#fff" stroke-width="3"/>
          </svg>
       </a>
-<aside class="section section-mobile">
+      <aside class="section section-mobile">
          <div class="wrapper">
             <div class="mobile">
                <ul class="mobile-menu">
@@ -236,5 +189,16 @@
       </aside>
       <script src=js/libs.min.js></script>
       <script src=js/main.js></script>
+
+      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCPMMGhzM5vjjDdsTm6Slx2uRNV-9SsEg&libraries=places"></script>
+      <!-- <script>
+        function initialize() {
+            var input = document.getElementsByClassName('field--place');
+            new google.maps.places.Autocomplete(input);
+        }
+
+        google.maps.event.addDomListener(window, 'load', initialize);
+    </script> -->
+
    </body>
 </html>
