--- a/blog.html
+++ b/blog.html
@@ -53,6 +53,16 @@
                   <a href="#" class="link link--evel link--login">Вхід</a>
                   <a href="#" class="link link--evel link--reg">Реєстрація</a>
                </div>
+               <div class="header-mobile">
+                  <a href="#" class="link link--toggle">
+                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 12" width="18" height="12">
+                        <path d="M18 7H0V5h18v2z" />
+                        <path d="M18 7H0V5h18v2z" />
+                        <path d="M0 0h18v2H0V0z" />
+                        <path d="M0 10h18v2H0v-2z" />
+                     </svg>
+                  </a>
+               </div>
             </div>
          </div>
       </header>
@@ -218,7 +228,56 @@
            <path d="M2 10l7-7 7 7" stroke="#fff" stroke-width="3"/>
          </svg>
       </a>
+      <aside class="section section-mobile">
+         <div class="wrapper">
+            <div class="mobile">
+               <ul class="mobile-menu">
+                  <li><a href="#" class="link link--evel link--menu">Лікарі</a></li>
+                  <li><a href="#" class="link link--evel link--menu">Корисні статі</a></li>
+                  <li><a href="#" class="link link--evel link--menu">Про сервіс</a></li>
+                  <li><a href="#" class="link link--evel link--menu">Контакти</a></li>
+                  <li><a href="#" class="link link--evel link--menu">Згода користувача</a></li>
+                  <li><a href="#" class="link link--evel link--menu">Правила сервісу</a></li>
+                  <li><a href="#" class="link link--evel link--menu">Питання та відповіді</a></li>
+                  <li><a href="#" class="link link--evel link--menu">Партнерам та реклама</a></li>
+               </ul>
+               <div class="mobile-btns">
+                  <a href="#" class="link link--evel link--login">
+                     <svg width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M9.453 16.787l1.88 1.88L18 12l-6.667-6.667-1.88 1.88 3.44 3.454H0v2.666h12.893l-3.44 3.454zM21.333 0H2.667C1.187 0 0 1.2 0 2.667V8h2.667V2.667h18.666v18.666H2.667V16H0v5.333A2.666 2.666 0 002.667 24h18.666C22.8 24 24 22.8 24 21.333V2.667C24 1.2 22.8 0 21.333 0z" fill="#fff"/>
+                     </svg>
+                     <span>Вхід</span>
+                  </a>
+                  <a href="#" class="link link--evel link--reg">
+                     <svg width="32" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10.667 7.333h-4v-4H4v4H0V10h4v4h2.667v-4h4V7.333zM24 8.667a3.983 3.983 0 003.987-4c0-2.214-1.774-4-3.987-4-.427 0-.84.066-1.213.186a6.58 6.58 0 011.2 3.814c0 1.426-.454 2.72-1.2 3.813.373.12.786.187 1.213.187zm-6.667 0a3.983 3.983 0 003.987-4c0-2.214-1.773-4-3.987-4-2.213 0-4 1.786-4 4 0 2.213 1.787 4 4 4zm8.827 2.88c1.107.973 1.84 2.213 1.84 3.786V18h4v-2.667c0-2.053-3.16-3.32-5.84-3.786zm-8.827-.214c-2.666 0-8 1.334-8 4V18h16v-2.667c0-2.666-5.333-4-8-4z" fill="#fff"/>
+                     </svg>
+                     <span>Реєстрація</span>
+                  </a>
+                  <!-- Выводи когда вошел -->
+                  <!-- <a href="#" class="link link--evel link--profile"><svg width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                     <path d="M11 11a5.332 5.332 0 005.333-5.333A5.332 5.332 0 0011 .333a5.332 5.332 0 00-5.333 5.334A5.332 5.332 0 0011 11zm0 2.667C7.44 13.667.333 15.453.333 19v2.667h21.334V19c0-3.547-7.107-5.333-10.667-5.333z" fill="#fff"/>
+                     </svg><span>Мій профайл</span></a> -->
+               </div>
 
+               <div class="mobile-lang">
+                     <select name="langselect" class="select select--header select--lang">
+                        <option data-href="/ua/" value="/ua/">укр</option>
+                        <option data-href="/ru/" value="/ru/">ру</option>
+                        <option data-href="/en/" value="/en/">en</option>
+                     </select>
+                  </div>
+                  <a href="tel:+380990909999" class="link link--evel link--phone">+38 099 09 099 99</a>
+               <div class="mobile-footer">
+                  <div class="mobile-footer__logo"><img src="img/logo.svg" alt=""></div>
+                  <div class="mobile-footer__text">
+                     <p class="paragraph sm c6">стоматологічна допомога</p>
+                     <p class="paragraph sm c6">© Copyright 2019 Zuber</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </aside>
       <script src=js/libs.min.js></script>
       <script src=js/main.js></script>
    </body>
