--- a/index.html
+++ b/index.html
@@ -450,6 +450,9 @@
                <h3 class="title title--h3 bl c2">
                   Онлайн-запис на прийом до лікаря
                </h3>
+               <div class="record-text">
+                  
+               
                <p class="paragraph lg c1">
                   Нужно срочно найти стоматолога в Киеве? Не знаете, какая стоматология лучше? Хотите узнать, какой хороший стоматолог принимает недалеко от вашего места жительства или работы? Сервис Zuber поможет вам найти лучшего стоматолога не только в столице, но и по всей Украине.</p>
 <p class="paragraph lg c1">Мы выводим сферу стоматологии и поиска медицинских учреждений на новый уровень. Теперь контакты передовых дантистов всегда будут под рукой и вы в любой момент сможете записаться на прием тогда, когда вам это будет удобно. </p>
@@ -489,6 +492,8 @@
 <p class="paragraph lg c1">Сотни положительных отзывов от пациентов со всей Украины говорят о том, что мы ответственно и с любовью подходим к своему делу. Мы поможем вам побороть страх перед стоматологами и стать обладателем здоровой и красивой улыбки. 
 
                </p>
+               </div>
+               <a href="#" class="btn btn--evel btn--view"><span class="text">Читати повністю</span><span class="active-text">Приховати</span></a>
             </div>
          </div>
       </section>
