--- a/result.html
+++ b/result.html
@@ -122,7 +122,7 @@
                   <div class="doctorpage-info__form">
                       <div class="find-form">
                         <p class="paragraph c6 big bl">Бронювання</p>
-                  <form action="any.php" class="form form-page">
+                  <form action="any.php" class="form form-page form-visible">
                      <div class="form-rows">
                            
                            <div class="form-block">
