--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
                   <a href="tel:+380990909999" class="link link--evel link--phone">+38 099 09 099 99</a>
                   <div class="header-city">
                      <select name="cityselect" class="select select--header select--city">
-                        <option value="Миколаїв">Миколаїв</option>
-                        <option value="Харьков">Харьков</option>
-                        <option value="Киев">Киев</option>
-                        <option value="Миколаїв">Миколаїв</option>
-                        <option value="Харьков">Харьков</option>
-                        <option value="Киев">Киев</option>
-                        <option value="Миколаїв">Миколаїв</option>
-                        <option value="Харьков">Харьков</option>
-                        <option value="Киев">Киев</option>
+                        <option value="12">Миколаїв</option>
+                        <option value="12">Харьков</option>
+                        <option value="12">Киев</option>
+                        <option value="12">Миколаїв</option>
+                        <option value="12">Харьков</option>
+                        <option value="12">Киев</option>
+                        <option value="12">Миколаїв</option>
+                        <option value="12">Харьков</option>
+                        <option value="12">Киев</option>
                      </select>
                   </div>
                   <div class="header-lang">
