--- a/reg.html
+++ b/reg.html
@@ -32,15 +32,15 @@
                   <a href="tel:+380990909999" class="link link--evel link--phone">+38 099 09 099 99</a>
                   <div class="header-city">
                      <select name="cityselect" class="select select--header select--city">
-                        <option value="Миколаїв">Миколаїв</option>
-                        <option value="Харьков">Харьков</option>
-                        <option value="Киев">Киев</option>
-                        <option value="Миколаїв">Миколаїв</option>
-                        <option value="Харьков">Харьков</option>
-                        <option value="Киев">Киев</option>
-                        <option value="Миколаїв">Миколаїв</option>
-                        <option value="Харьков">Харьков</option>
-                        <option value="Киев">Киев</option>
+                        <option value="12">Миколаїв</option>
+                        <option value="12">Харьков</option>
+                        <option value="12">Киев</option>
+                        <option value="12">Миколаїв</option>
+                        <option value="12">Харьков</option>
+                        <option value="12">Киев</option>
+                        <option value="12">Миколаїв</option>
+                        <option value="12">Харьков</option>
+                        <option value="12">Киев</option>
                      </select>
                   </div>
                   <div class="header-lang">
@@ -97,28 +97,34 @@
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Лікування зубів" id="l1" name="spec[]" />
                               <label for="l1">Лікування зубів</label>
+                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Хірургія" id="l2" name="spec[]" />
                               <label for="l2">Хірургія</label>
+                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Лікування карієсу" id="l3" name="spec[]" />
                               <label for="l3">Лікування карієсу</label>
+                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                         </div>
                         <div class="form-col">
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Дитяча стоматологія" id="l4" name="spec[]" />
                               <label for="l4">Дитяча стоматологія</label>
+                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Імплантація" id="l5" name="spec[]" />
                               <label for="l5">Імплантація</label>
+                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Інше" id="l6" name="spec[]" />
                               <label for="l6">Інше</label>
+                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                         </div>
                      </div>
@@ -193,7 +199,7 @@
                                        </span>
                                        <span class="field-type__text">Viber</span>
                                     </li>
-                                    <li data-type="tel" data-name="telegram">
+                                    <li data-type="text" data-name="telegram">
                                        <span class="field-type__svg">
                                           <svg width="19" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                              <path d="M7.7 14.78l.28-4.23 7.68-6.92c.34-.31-.07-.46-.52-.19L5.66 9.43l-4.1-1.3c-.88-.25-.89-.86.2-1.3L17.73.67c.73-.33 1.43.18 1.15 1.3l-2.72 12.81c-.19.91-.74 1.13-1.5.71l-4.14-3.06-1.99 1.93c-.23.23-.42.42-.83.42z" fill="#1B65B9"/>
@@ -201,7 +207,7 @@
                                        </span>
                                        <span class="field-type__text">Telegram</span>
                                     </li>
-                                    <li data-type="tel" data-name="messenger">
+                                    <li data-type="text" data-name="messenger">
                                        <span class="field-type__svg">
                                           <svg width="21" height="21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                              <path d="M10.92.13c-5.64 0-10 4.13-10 9.7 0 2.91 1.19 5.44 3.14 7.17.16.13.26.35.27.57l.05 1.78c.04.57.61.94 1.13.71l1.98-.87c.17-.06.36-.09.53-.06.9.27 1.9.4 2.9.4 5.64 0 10-4.13 10-9.7 0-5.57-4.36-9.7-10-9.7zm6 7.46l-2.93 4.67c-.47.73-1.47.92-2.17.37L9.48 10.9a.6.6 0 00-.72 0L5.6 13.3c-.42.33-.97-.17-.68-.63L7.85 8c.47-.73 1.47-.92 2.17-.4l2.34 1.76a.6.6 0 00.72 0l3.16-2.4c.42-.33.97.17.68.63z" fill="#1B65B9"/>
