--- a/reg.html
+++ b/reg.html
@@ -97,34 +97,58 @@
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Лікування зубів" id="l1" name="spec[]" />
                               <label for="l1">Лікування зубів</label>
-                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Хірургія" id="l2" name="spec[]" />
                               <label for="l2">Хірургія</label>
-                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Лікування карієсу" id="l3" name="spec[]" />
                               <label for="l3">Лікування карієсу</label>
-                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                         </div>
                         <div class="form-col">
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Дитяча стоматологія" id="l4" name="spec[]" />
                               <label for="l4">Дитяча стоматологія</label>
-                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Імплантація" id="l5" name="spec[]" />
                               <label for="l5">Імплантація</label>
-                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
                               <input type="checkbox" class="checkbox" required value="Інше" id="l6" name="spec[]" />
-                              <label for="l6">Інше</label>
-                              <input type="text" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
+                              <label for="l6">Інше</label>                           </div>
+                        </div>
+                     </div>
+                     <p class="paragraph c2 bl p-m">Вартість послуг, грн</p>
+                     <div class="form-row special">
+                        <div class="form-col">
+                           <div class="form-check">
+                              <input type="text" disabled value="Імплантація" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
+                           </div>
+                           <div class="form-check">
+                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
+                           </div>
+                           <div class="form-check">
+                              <input type="text" disabled value="Імплантація" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
+                           </div>
+                        </div>
+                        <div class="form-col">
+                           <div class="form-check">
+                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
+                           </div>
+                           <div class="form-check">
+                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
+                           </div>
+                           <div class="form-check">
+                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                         </div>
                      </div>
