--- a/reg.html
+++ b/reg.html
@@ -125,29 +125,29 @@
                      <div class="form-row special">
                         <div class="form-col">
                            <div class="form-check">
-                              <input type="text" disabled value="Імплантація" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="text" disabled value="Імплантація" class="field field--eternal field--val" required value="Дитяча стоматологія" name="grn[]" />
                               <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
-                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" name="grn[]" />
                               <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
-                              <input type="text" disabled value="Імплантація" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="text" disabled value="Імплантація" class="field field--eternal field--val" required value="Дитяча стоматологія" name="grn[]" />
                               <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                         </div>
                         <div class="form-col">
                            <div class="form-check">
-                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" name="grn[]" />
                               <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
-                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" name="grn[]" />
                               <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                            <div class="form-check">
-                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" id="v4" name="spec[]" />
+                              <input type="text" disabled value="Дитяча стоматологія" class="field field--eternal field--val" required value="Дитяча стоматологія" name="grn[]" />
                               <input type="number" class="field field--eternal price--spec" placeholder="Вартість" name="price[]" value="">
                            </div>
                         </div>
@@ -241,7 +241,7 @@
                                     </li>
                                  </ul>
                               </div>
-                              <input type="tel" name="contact[1][phone]" required class="field field--eternal phone" id="contact[1]">
+                              <input type="tel" name="contact[1][phone]" required class="field field--eternal field--mask phone" id="contact[1]">
                               <label for="contact[1]">Телефон</label>
                            </div>
                            <div class="form-block">
